Четвертая версия проекта

--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
 integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
  crossorigin="anonymous" referrerpolicy="no-referrer">
   <link rel="stylesheet" href="main.css">
-  <link href="https://fonts.googleapis.com/css2?
-  family=Raleway:wght@100;300;400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -19,6 +17,7 @@ integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEB
       <button>Заказать</button></div>
   </header>
   <section class="about">
+    <canvas class="orb-canvas" id="orb-canvas"></canvas>
     <div class="about__info animate__animated animate__fadeInLeft animate__slow">
       <h1>Солнечные панели GreenRobotic</h1>
       <p>Производите дешёвую экологически чистую электроэнергию из солнечного света</p>
@@ -161,5 +160,6 @@ integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEB
   </div>
   <div class ="footer__copyright">GreenCorp © 2021</div>
   </footer>
+  <script src="js/canvas.js"></script>
 </body>
 </html>
