--- a/index.html
+++ b/index.html
@@ -58,10 +58,11 @@ integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEB
 <div class="features__border"></div>
 <div class="features__feedback">
   <div class="features__feedback-left">
-<h2>Нам доверяет
-  <br>
-  5000+ счастливых клиентов
-</h2>
+    <h2>
+      Нам доверяет
+      <br>
+      <div class="features__clients-count">5000+</div> счастливых клиентов
+    </h2>
 <p>Мы помогли тысячам людей перейти на зеленую энергию.
   <br>
   После заказа мы позаботимся обо всем: доставка панелей, проект, установка, помощь в использовании.
@@ -101,14 +102,14 @@ integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEB
 </div>
 </div>
 </section>
-  <section class="form">
-    <div class="form__containter">
+<section class="form" id="form">
+  <div class="form__containter">
       <h1>Оставьте свои контакты</h1>
       <p>Поможем подобрать модель. 
         <br>Выбрать удобный вариант доставки и установки.
         <br>Гарантия возврата денег.</p>
-      <form>
-        <div class="form__group">
+        <form>
+          <div class="form__group">
           <label for="name">Ваше имя</label>
           <input type="text" placeholder="Введите имя" id="name">
         </div>
@@ -127,10 +128,13 @@ integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEB
             <option value="10-30"> 10 000P - 30 000P</option>
             <option value="30-60"> 30 000P - 60 000P</option>
             <option value="60-100"> 60 000P - 100 000P</option>
-            <option value="100+"> 100 000P</option>
+            <option value="other">Другое</option>
           </select>
         </div>
-          <button type="submit" class="form__submit">Отправить заявку</button>
+        <div class="form__group form__other-input">
+          <input type="text" placeholder="Введите ваш вариант">
+        </div>  
+        <button type="submit" class="form__submit">Отправить заявку</button>
       </form>
     </div>
   </section>
@@ -161,5 +165,6 @@ integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEB
   <div class ="footer__copyright">GreenCorp © 2021</div>
   </footer>
   <script src="js/canvas.js"></script>
+  <script src="js/animations.js"></script>
 </body>
 </html>
